ai/management/oas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oas-share-deploy
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oas-share
  template:
    metadata:
      labels:
        app: oas-share
    spec:
      containers:
        - name: fileserve
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "32Mi"
              cpu: "50m"
          image: newa/fileserv:1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: openapi
            mountPath: /tmp
      volumes:
        - name: openapi
          configMap:
            name: ai-oas
---
apiVersion: v1
kind: Service
metadata:
  name: oas-share-svc
  namespace: traefik
  labels:
    app: oas-share
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
  selector:
    app: oas-share
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oas-share-ing
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`oas-share.${CLUSTERNAME}.${FULLDOMAINNAME}`)
      services:
        - name: oas-share-svc
          port: 80
